--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ section:last-child {
 mapboxgl.accessToken = '';
 var map = new mapboxgl.Map({
     container: 'map',
-    style: 'https://nickerader.github.io/brew-dog/style.json',
+    style: 'https://nickerander.github.io/brew-dog/style.json',
         maxZoom: 16,
         bearing: 0,
         center: [-3.276136, 54.831588],
